--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
 		"@pucelle/lupos.js": "^1.0.0"
 	},
 	"devDependencies": {
+		"@pucelle/webpack-svg-loader": "^1.0.0",
 		"fork-ts-checker-webpack-plugin": "^9.0.2",
-		"svg-inline-loader": "^0.8.2",
 		"ts-loader": "^9.5.1",
 		"ts-patch": "^3.2.1",
 		"typescript": "^5.6.2",
