--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,10 +8,10 @@
 		"outDir": "out",
 		"allowJs": true,
 		"esModuleInterop": true, 
-		"composite": true,
+		"composite": false,
 		"declaration": true,
 		"strict": true,
-		"noUnusedLocals": false,
+		"noUnusedLocals": true,
 		"noUnusedParameters": true,
 		"noImplicitReturns": true,
 		"noFallthroughCasesInSwitch": true,
