--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
 	},
 	"dependencies": {
 		"@pucelle/ff": "^2.0.0",
-		"@pucelle/lupos.js": "^1.0.0"
+		"@pucelle/lupos": "^0.1.0",
+		"@pucelle/lupos.js": "^0.1.0"
 	},
 	"devDependencies": {
-		"@pucelle/lupos.compiler": "^1.0.0",
 		"@pucelle/webpack-svg-loader": "^1.0.0",
 		"typescript": "^5.6.2",
 		"webpack": "^5.95.0",
